--- a/StaticDrawing.vcxproj
+++ b/StaticDrawing.vcxproj
@@ -166,6 +166,9 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="02_StaticDrawing.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
