--- a/StaticDrawing.vcxproj.filters
+++ b/StaticDrawing.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="02_StaticDrawing.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
