--- a/StaticDrawing.vcxproj.filters
+++ b/StaticDrawing.vcxproj.filters
@@ -28,7 +28,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="02_StaticDrawing.png">
+    <Image Include="02_StaticDrawing example.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="02_StaticDrawing result.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
